--- a/index.css
+++ b/index.css
@@ -40,7 +40,7 @@ body {
     font-size: 20px;
     color: #464E47;
 }
-
+/* Navbar Styling */
 #navbar {
     display: flex;
     align-items: center;
@@ -77,7 +77,7 @@ body {
 #navbar li a:hover::after {
     width: 50%;
 }
-
+/* Search Bar Styling */
 #search {
     display: flex;
     position: relative;
